--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,4 @@
+@import "src/assets/font/GeneralSans_Complete/Fonts/WEB/fonts/GeneralSans-Regular.ttf";
 * {
     padding: 0;
     margin: 0;
@@ -5,6 +6,7 @@
 }
 
 html {
+    font-family: GeneralSans-Regular, sans-serif;
 }
 
 body {
